[gd_scene load_steps=10 format=4 uid="uid://brunj3a6qwm7s"]

[ext_resource type="Texture2D" uid="uid://dvxp0p0jaban6" path="res://sprites/tiles.png" id="1_jas4a"]
[ext_resource type="Script" uid="uid://cau5a545bi02q" path="res://scripts/chunk.gd" id="1_jtw3q"]
[ext_resource type="PackedScene" uid="uid://b3mjmnbllqod7" path="res://scenes/object.tscn" id="3_c3gog"]
[ext_resource type="FontFile" uid="uid://c1rbege7qvcvu" path="res://fonts/Stepalange-x3BLm.otf" id="4_y5xp6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtw3q"]
size = Vector2(254, 254)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jtw3q"]
texture = ExtResource("1_jas4a")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/size_in_atlas = Vector2i(2, 2)
0:1/0 = 0
2:1/0 = 0
2:2/0 = 0
3:2/0 = 0
3:1/0 = 0
0:3/size_in_atlas = Vector2i(3, 1)
0:3/0 = 0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_y5xp6"]
resource_name = "big_rock"
scenes/1/scene = ExtResource("3_c3gog")

[sub_resource type="TileSet" id="TileSet_dinhu"]
sources/0 = SubResource("TileSetAtlasSource_jtw3q")
sources/1 = SubResource("TileSetScenesCollectionSource_y5xp6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3gog"]
size = Vector2(257, 2)

[node name="Chunk" type="Node2D"]
script = ExtResource("1_jtw3q")

[node name="VisualBorders" type="Node2D" parent="."]

[node name="Up" type="VisibleOnScreenNotifier2D" parent="VisualBorders"]
position = Vector2(0, -112)
scale = Vector2(12.8, 1.6)

[node name="Down" type="VisibleOnScreenNotifier2D" parent="VisualBorders"]
position = Vector2(0, 112)
scale = Vector2(12.8, 1.6)

[node name="Left" type="VisibleOnScreenNotifier2D" parent="VisualBorders"]
position = Vector2(-112, -2.38419e-07)
scale = Vector2(1.6, 12.8)

[node name="Right" type="VisibleOnScreenNotifier2D" parent="VisualBorders"]
position = Vector2(112, 1.90735e-06)
scale = Vector2(1.6, 12.8)

[node name="Left" type="Area2D" parent="."]
position = Vector2(-256, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Right" type="Area2D" parent="."]
position = Vector2(256, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Up" type="Area2D" parent="."]
position = Vector2(0, -256)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Down" type="Area2D" parent="."]
position = Vector2(0, 256)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Center" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Grass" type="TileMapLayer" parent="."]
show_behind_parent = true
z_index = -999
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAP//AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD+////AAAAAAAAAAD+//7/AAABAAAAAAD///7/AAAAAAAAAAAAAP7/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAABAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAABAAAAAAD9/wIAAAABAAAAAAD9/wEAAAABAAAAAAD9/wAAAAAAAAAAAAD9////AAAAAAAAAAD9//7/AAABAAAAAAD9//3/AAABAAAAAAD+//3/AAAAAAAAAAD///3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP3/AAAAAAAAAAABAP3/AAAAAAAAAAAAAP3/AAAAAAAAAAACAP//AAABAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAIAAAACAAAAAAD//wIAAAACAAAAAAACAAIAAAAAAAAAAAD+/wIAAAABAAAAAAD8/wIAAAACAAAAAAD8/wEAAAACAAAAAAD8/wAAAAAAAAAAAAD8////AAAAAAAAAAD8//7/AAABAAAAAAD8//3/AAACAAAAAAD8//z/AAABAAAAAAD9//z/AAABAAAAAAD+//z/AAAAAAAAAAD///z/AAACAAAAAAAAAPz/AAACAAAAAAABAPz/AAAAAAAAAAACAPz/AAABAAAAAAADAPz/AAABAAAAAAADAP3/AAAAAAAAAAADAP7/AAABAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAACAAAAAAABAAMAAAABAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAACAAAAAAAAAAUAAAABAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAACAAAAAAD6/wUAAAABAAAAAAD6/wQAAAAAAAAAAAD6/wMAAAABAAAAAAD6/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD6////AAAAAAAAAAD6//7/AAAAAAAAAAD6//3/AAAAAAAAAAD6//z/AAAAAAAAAAD6//v/AAABAAAAAAD6//r/AAACAAAAAAD7//r/AAAAAAAAAAD8//r/AAAAAAAAAAAAAPr/AAABAAAAAAD///r/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAABAPr/AAABAAAAAAACAPr/AAACAAAAAAADAPr/AAAAAAAAAAAEAPr/AAACAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAABAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAABAAAAAAAFAAAAAAABAAAAAAAFAAEAAAABAAAAAAAFAAIAAAABAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAABAAAAAAAEAAUAAAACAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAAAAAAAAAD5/wcAAAAAAAAAAAD6/wcAAAAAAAAAAAD7/wcAAAAAAAAAAAD8/wcAAAAAAAAAAAD9/wcAAAAAAAAAAAD+/wcAAAAAAAAAAAD//wcAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAQAAAABAAAAAAAGAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP3/AAABAAAAAAAHAPz/AAABAAAAAAAHAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPn/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPj/AAAAAAAAAAAGAPj/AAAAAAAAAAAFAPj/AAAAAAAAAAAEAPj/AAAAAAAAAAADAPj/AAAAAAAAAAACAPj/AAAAAAAAAAABAPj/AAAAAAAAAAAAAPj/AAAAAAAAAAD///j/AAAAAAAAAAD+//j/AAAAAAAAAAD9//j/AAAAAAAAAAD8//j/AAAAAAAAAAD7//j/AAAAAAAAAAD6//j/AAAAAAAAAAD5//j/AAAAAAAAAAD4//j/AAAAAAAAAAD4//n/AAACAAAAAAD4//r/AAACAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD5//z/AAABAAAAAAD5//3/AAAAAAAAAAD5//7/AAABAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAACAAAAAAD5/wYAAAABAAAAAAD4/wUAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wAAAAAAAAAAAAD4////AAAAAAAAAAD4//7/AAAAAAAAAAD4//3/AAAAAAAAAAD5//r/AAACAAAAAAD5//v/AAABAAAAAAD5//n/AAACAAAAAAD6//n/AAABAAAAAAD7//n/AAAAAAAAAAD8//n/AAABAAAAAAD///n/AAAAAAAAAAAAAPn/AAABAAAAAAABAPn/AAABAAAAAAD+//n/AAAAAAAAAAD9//n/AAABAAAAAAACAPn/AAABAAAAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAABAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAABAAAAAAD//wYAAAAAAAAAAAD+/wYAAAACAAAAAAD9/wYAAAACAAAAAAD8/wYAAAAAAAAAAAD7/wYAAAAAAAAAAAD6/wYAAAABAAAAAAAFAAMAAAACAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAACAAAAAAABAAQAAAACAAAAAAACAAQAAAACAAAAAAD9/wQAAAACAAAAAAD8/wQAAAACAAAAAAD7/wQAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wAAAAAAAAAAAAD7////AAABAAAAAAD7//7/AAACAAAAAAD7//3/AAACAAAAAAD7//z/AAAAAAAAAAD8//v/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAD7//v/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAABAAAAAAAEAP//AAACAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAABAAAAAAAEAAIAAAABAAAAAAAEAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_dinhu")

[node name="ColorBorders" type="Node2D" parent="Grass"]

[node name="Up" type="ColorRect" parent="Grass/ColorBorders"]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -127.0
color = Color(0.6117647, 0.15294118, 0, 1)

[node name="Down" type="ColorRect" parent="Grass/ColorBorders"]
offset_left = -128.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 129.0
color = Color(0.6117647, 0.15294118, 0, 1)

[node name="Left" type="ColorRect" parent="Grass/ColorBorders"]
offset_left = -128.0
offset_top = -128.0
offset_right = -127.0
offset_bottom = 129.0
color = Color(0.6117647, 0.15294118, 0, 1)

[node name="Right" type="ColorRect" parent="Grass/ColorBorders"]
offset_left = 128.0
offset_top = -128.0
offset_right = 129.0
offset_bottom = 129.0
color = Color(0.6117647, 0.15294118, 0, 1)

[node name="ColorBarriers" type="Node2D" parent="Grass"]

[node name="Up" type="ColorRect" parent="Grass/ColorBarriers"]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -127.0
color = Color(0.16078432, 0.047058824, 0.02745098, 1)

[node name="Down" type="ColorRect" parent="Grass/ColorBarriers"]
offset_left = -128.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 129.0
color = Color(0.16078432, 0.047058824, 0.02745098, 1)

[node name="Left" type="ColorRect" parent="Grass/ColorBarriers"]
offset_left = -128.0
offset_top = -128.0
offset_right = -127.0
offset_bottom = 129.0
color = Color(0.16078432, 0.047058824, 0.02745098, 1)

[node name="Right" type="ColorRect" parent="Grass/ColorBarriers"]
offset_left = 128.0
offset_top = -128.0
offset_right = 129.0
offset_bottom = 129.0
color = Color(0.16078432, 0.047058824, 0.02745098, 1)

[node name="TextData" type="RichTextLabel" parent="Grass"]
offset_left = -128.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 21.0
theme_override_colors/default_color = Color(0.96862745, 0.42352942, 0.24313726, 1)
theme_override_colors/font_outline_color = Color(0.6117647, 0.15294118, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/normal_font = ExtResource("4_y5xp6")
theme_override_font_sizes/normal_font_size = 38
theme_override_font_sizes/bold_font_size = 15
bbcode_enabled = true
text = "[center]10"
fit_content = true
scroll_active = false

[node name="Objects" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6/wQAAQAAAAAAAQA=")
tile_set = SubResource("TileSet_dinhu")

[node name="ObjectRemovedDetect" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectRemovedDetect"]
shape = SubResource("RectangleShape2D_jtw3q")

[node name="Barriers" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="Up" type="CollisionShape2D" parent="Barriers"]
position = Vector2(0, -128)
shape = SubResource("RectangleShape2D_c3gog")

[node name="Down" type="CollisionShape2D" parent="Barriers"]
position = Vector2(-0.5, 128)
shape = SubResource("RectangleShape2D_c3gog")

[node name="Left" type="CollisionShape2D" parent="Barriers"]
position = Vector2(-128, 0)
rotation = -1.5707941
shape = SubResource("RectangleShape2D_c3gog")

[node name="Right" type="CollisionShape2D" parent="Barriers"]
position = Vector2(128, 0)
rotation = -1.5707941
shape = SubResource("RectangleShape2D_c3gog")

[connection signal="area_entered" from="Left" to="." method="_on_left_entered"]
[connection signal="area_entered" from="Right" to="." method="_on_right_entered"]
[connection signal="area_entered" from="Up" to="." method="_on_up_entered"]
[connection signal="area_entered" from="Down" to="." method="_on_down_entered"]
[connection signal="area_exited" from="ObjectRemovedDetect" to="." method="_on_object_removed_detect_area_exited"]
